apps/workloads/portal/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: portal
  labels:
    app.kubernetes.io/name: portal
spec:
  selector:
    app.kubernetes.io/name: portal
  ports:
    - name: http
      port: 3000
      targetPort: http
